Select menu layering fix and cursor input fix alignment fix (#445)

--- a/src/styles/segment-term.module.scss
+++ b/src/styles/segment-term.module.scss
@@ -41,7 +41,6 @@
     position: relative;
     padding-left: 26px;
     margin-bottom: 12px;
-    z-index: 1;
 
     :global .btn-group {
       border: 1px solid $slate-20;
@@ -100,7 +99,6 @@
 
     :global {
       .input-select-wrap {
-        z-index: 2;
         min-width: 200px;
         margin-right: 20px;
         margin-bottom: 0;
